Bug 294044 - Dolphin won't accept custom Icons
Summary: Dolphin won't accept custom Icons
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kshareddatacache (other bugs)
Version First Reported In: 4.7
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-14 05:51 UTC by info
Modified: 2012-05-11 02:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description info 2012-02-14 05:51:36 UTC
Version:           1.7
OS:                Linux

Hi

I use Dolphin under Lubuntu 11.04 64bit. 

I tried to change the standard Icon theme to nuoveXT2.2 for KDE (from kde-look), but Dolphin is ignoring it. 
I even installed package "systemsettings" and tried to set the Icon theme there but it won't work either. 

Reproducible: Always

Steps to Reproduce:
Install Dolphin
Install systemsettings
systemsettings > install Icon theme
systemsettings > set Icon theme

Actual Results:  
keeps showing oxygen theme

Expected Results:  
shows nuoveXT theme
Comment 1 Michael Pyne 2012-05-11 02:55:10 UTC
Git commit 8c121a63a6823ebf77d882b745462472a3b17bdf by Michael Pyne.
Committed on 11/05/2012 at 03:46.
Pushed by mpyne into branch 'KDE/4.8'.

Delete cached icons in-memory when changing icon theme.

This should hopefully fix bug 294044 ("Dolphin won't accept custom
icons"), although I can only partially reproduce it. I was able to
verify that icons left in the KSharedDataCache for running processes are
preferred without checking the new theme, which this patch fixes.
FIXED-IN:4.8.4

M  +1    -0    kdeui/icons/kiconloader.cpp

http://commits.kde.org/kdelibs/8c121a63a6823ebf77d882b745462472a3b17bdf