Delete cached icons in-memory when changing icon theme.

This should hopefully fix bug 294044 ("Dolphin won't accept custom
icons"), although I can only partially reproduce it. I was able to
verify that icons left in the KSharedDataCache for running processes are
preferred without checking the new theme, which this patch fixes.

BUG:294044
FIXED-IN:4.8.4